avoid layers dissapear if they overlap

--- a/src/SubjectPopup/styles.module.scss
+++ b/src/SubjectPopup/styles.module.scss
@@ -23,7 +23,7 @@
         margin-bottom: .5rem;
         margin-right: .5rem;
         height: 1.15rem;
-        filter: grayscale(100%) brightness(100%) invert(100%);
+        filter: brightness(0) invert(1);
       }
     }
   }
